new icons and index meta

--- a/src/assets/fonts/Verity-Icons.html
+++ b/src/assets/fonts/Verity-Icons.html
@@ -98,6 +98,13 @@
   </div>
   <div class="preview">
     <span class="inner">
+      <i class="icon icon-raid"></i>
+    </span>
+    <br>
+    <span class="label">raid</span>
+  </div>
+  <div class="preview">
+    <span class="inner">
       <i class="icon icon-sphere"></i>
     </span>
     <br>
