Various improvements: infoPanel, footer, icons

--- a/src/assets/fonts/Verity-Icons.html
+++ b/src/assets/fonts/Verity-Icons.html
@@ -84,6 +84,20 @@
   </div>
   <div class="preview">
     <span class="inner">
+      <i class="icon icon-github-mark-white"></i>
+    </span>
+    <br>
+    <span class="label">github-mark-white</span>
+  </div>
+  <div class="preview">
+    <span class="inner">
+      <i class="icon icon-github-mark"></i>
+    </span>
+    <br>
+    <span class="label">github-mark</span>
+  </div>
+  <div class="preview">
+    <span class="inner">
       <i class="icon icon-prism"></i>
     </span>
     <br>
